fix story